manifest/services/chat-frontend-service/overlays/main/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hercules-frontend-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - host: chat.v2d27demo.online
      http:
        paths:
          - backend:
              service:
                name: hercules-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
